# bewley

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
examples/: interview_two.txt  tehran.txt
examples/exports/: code-explorer.html  interview-two-annotated.html
examples/upwork/: bootstrap_bewley_project.py  build_report_with_appendix.py  build_self_contained_report.py  convert_docx_to_markdown.py  first_pass_span_coding.py
qualitative-analysis/: SKILL.md  generate_candidate_codes.py
src/bewley/: __main__.py  cli.py
tests/: conftest.py  test_annotations.py  test_audio.py  test_codes.py  test_documents.py  test_event_log.py  test_export.py  test_history.py  test_query.py  test_selective.py  test_smoke.py  test_video.py
tests/corpus/: interview_alice.txt  interview_bob.txt  interview_carol.txt
