[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bewley"
version = "0.1.0"
description = "Local-first qualitative coding CLI"
requires-python = ">=3.12"

[project.scripts]
bewley = "bewley.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
